Fix overlap bug

--- a/style.css
+++ b/style.css
@@ -27,5 +27,5 @@ emoji-picker {
 }
 
 .has-tooltip:hover .tooltip {
-  @apply visible z-10;
+  @apply visible z-20;
 }
